fix: prices section full width alignment

--- a/githubaction/css/style.css
+++ b/githubaction/css/style.css
@@ -216,6 +216,7 @@ header {
 /* Commodity Prices Section */
 .prices-section {
     margin-bottom: 30px;
+    width: 100%;
 }
 
 .section-title {
